[gd_scene load_steps=23 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/data_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/game_state_manager.gd" id="3"]
[ext_resource type="Script" path="res://scripts/api_client.gd" id="4"]
[ext_resource type="Script" path="res://scripts/prompt_assembler.gd" id="5"]
[ext_resource type="Script" path="res://scripts/conversation_buffer.gd" id="6"]
[ext_resource type="Script" path="res://scripts/roll_engine.gd" id="7"]
[ext_resource type="Script" path="res://scripts/header_bar.gd" id="8"]
[ext_resource type="Script" path="res://scripts/chat_panel.gd" id="9"]
[ext_resource type="Script" path="res://scripts/settings_screen.gd" id="10"]
[ext_resource type="Script" path="res://scripts/debug_panel.gd" id="11"]
[ext_resource type="Script" path="res://scripts/prompt_retry_manager.gd" id="12"]
[ext_resource type="Script" path="res://scripts/portrait_manager.gd" id="13"]
[ext_resource type="Script" path="res://scripts/characters_panel.gd" id="14"]
[ext_resource type="Script" path="res://scripts/laws_panel.gd" id="15"]
[ext_resource type="Script" path="res://scripts/context_agent.gd" id="16"]
[ext_resource type="Script" path="res://scripts/sticky_context.gd" id="17"]
[ext_resource type="Script" path="res://scripts/profile_manager.gd" id="18"]
[ext_resource type="Script" path="res://scripts/api_logger.gd" id="19"]
[ext_resource type="Script" path="res://scripts/session_recorder.gd" id="20"]
[ext_resource type="Script" path="res://scripts/event_diagnostics.gd" id="21"]
[ext_resource type="Script" path="res://scripts/engine_eval_panel.gd" id="22"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="DataManager" type="Node" parent="."]
script = ExtResource("2")

[node name="GameStateManager" type="Node" parent="."]
script = ExtResource("3")

[node name="ApiClient" type="Node" parent="."]
script = ExtResource("4")

[node name="PromptAssembler" type="Node" parent="."]
script = ExtResource("5")

[node name="ConversationBuffer" type="Node" parent="."]
script = ExtResource("6")

[node name="RollEngine" type="Node" parent="."]
script = ExtResource("7")

[node name="PromptRetryManager" type="Node" parent="."]
script = ExtResource("12")

[node name="PortraitManager" type="Node" parent="."]
script = ExtResource("13")

[node name="ContextAgent" type="Node" parent="."]
script = ExtResource("16")

[node name="StickyContext" type="Node" parent="."]
script = ExtResource("17")

[node name="ProfileManager" type="Node" parent="."]
script = ExtResource("18")

[node name="ApiLogger" type="Node" parent="."]
script = ExtResource("19")

[node name="SessionRecorder" type="Node" parent="."]
script = ExtResource("20")

[node name="EventDiagnostics" type="Node" parent="."]
script = ExtResource("21")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderBar" type="PanelContainer" parent="Layout"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
script = ExtResource("8")

[node name="MarginContainer" type="MarginContainer" parent="Layout/HeaderBar"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Layout/HeaderBar/MarginContainer"]
layout_mode = 2

[node name="LocationIcon" type="Label" parent="Layout/HeaderBar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Location:"
theme_override_colors/font_color = Color(0.831, 0.773, 0.663, 1)

[node name="LocationLabel" type="Label" parent="Layout/HeaderBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Valladolid, Royal Palace"
theme_override_colors/font_color = Color(0.933, 0.898, 0.839, 1)

[node name="Spacer" type="Control" parent="Layout/HeaderBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="DateLabel" type="Label" parent="Layout/HeaderBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
theme_override_colors/font_color = Color(0.933, 0.898, 0.839, 1)
horizontal_alignment = 2

[node name="Spacer2" type="Control" parent="Layout/HeaderBar/MarginContainer/HBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(24, 0)

[node name="CharactersLabel" type="Label" parent="Layout/HeaderBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = ""
theme_override_colors/font_color = Color(0.627, 0.722, 0.851, 1)
horizontal_alignment = 2

[node name="DebugButton" type="Button" parent="Layout/HeaderBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(70, 0)
text = "Debug"
theme_override_colors/font_color = Color(0.6, 0.75, 0.6, 1)

[node name="SettingsButton" type="Button" parent="Layout/HeaderBar/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Settings"

[node name="TabBar" type="TabBar" parent="Layout"]
unique_name_in_owner = true
layout_mode = 2
tab_count = 4
tab_0/title = "Narrative"
tab_1/title = "Characters"
tab_2/title = "Laws"
tab_3/title = "Engine"

[node name="ContentArea" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatPanel" type="VBoxContainer" parent="Layout/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("9")

[node name="NarrativeScroll" type="ScrollContainer" parent="Layout/ContentArea/ChatPanel"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="NarrativeDisplay" type="RichTextLabel" parent="Layout/ContentArea/ChatPanel/NarrativeScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
scroll_active = false
selection_enabled = true

[node name="ThinkingIndicator" type="Label" parent="Layout/ContentArea/ChatPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "The court awaits..."
theme_override_colors/font_color = Color(0.627, 0.627, 0.627, 1)
horizontal_alignment = 1
visible = false

[node name="RollContainer" type="HBoxContainer" parent="Layout/ContentArea/ChatPanel"]
unique_name_in_owner = true
layout_mode = 2
visible = false

[node name="RollLabel" type="Label" parent="Layout/ContentArea/ChatPanel/RollContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "d100 Roll:"
theme_override_colors/font_color = Color(0.933, 0.776, 0.38, 1)

[node name="RollInput" type="LineEdit" parent="Layout/ContentArea/ChatPanel/RollContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1-100"
alignment = 1

[node name="RollButton" type="Button" parent="Layout/ContentArea/ChatPanel/RollContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Submit Roll"

[node name="Separator" type="HSeparator" parent="Layout/ContentArea/ChatPanel"]
layout_mode = 2

[node name="InputArea" type="HBoxContainer" parent="Layout/ContentArea/ChatPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 80)

[node name="InputField" type="TextEdit" parent="Layout/ContentArea/ChatPanel/InputArea"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "What does Juan do?"
wrap_mode = 1

[node name="SendButton" type="Button" parent="Layout/ContentArea/ChatPanel/InputArea"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Send"

[node name="CharactersPanel" type="Control" parent="Layout"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("14")

[node name="LawsPanel" type="Control" parent="Layout"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("15")

[node name="EngineEvalPanel" type="Control" parent="Layout"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("22")

[node name="SettingsScreen" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10")

[node name="MarginContainer" type="MarginContainer" parent="SettingsScreen"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsScreen/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="SettingsScreen/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "CASTILE 1430"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Historical Simulation"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.627, 0.627, 0.627, 1)

[node name="Sep1" type="HSeparator" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2

[node name="ApiSection" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "API Configuration"
theme_override_font_sizes/font_size = 18

[node name="ApiKeyLabel" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Anthropic API Key:"

[node name="ApiKeyInput" type="LineEdit" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "sk-ant-..."
secret = true

[node name="ModelLabel" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Model:"

[node name="ModelOption" type="OptionButton" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="OpenAIKeyLabel" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Stability AI API Key (for portrait generation):"

[node name="OpenAIKeyInput" type="LineEdit" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="SaveSettingsButton" type="Button" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Save API Settings"

[node name="StatusLabel" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
theme_override_colors/font_color = Color(0.627, 0.831, 0.627, 1)
horizontal_alignment = 1

[node name="Sep2" type="HSeparator" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2

[node name="TestSection" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Test Mode"
theme_override_font_sizes/font_size = 18

[node name="TestModeCheck" type="CheckButton" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Enable Test Mode (data writes go to separate test directory)"

[node name="ClearTestButton" type="Button" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Test Data"
theme_override_colors/font_color = Color(0.933, 0.6, 0.6, 1)

[node name="Sep3" type="HSeparator" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2

[node name="CampaignSection" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Campaign"
theme_override_font_sizes/font_size = 18

[node name="LoadLabel" type="Label" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Load Existing Campaign:"

[node name="CampaignList" type="ItemList" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 120)

[node name="LoadCampaignButton" type="Button" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Campaign"

[node name="ResetCampaignButton" type="Button" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Campaign Data (wipe & rebuild from starter database)"
theme_override_colors/font_color = Color(0.933, 0.4, 0.4, 1)

[node name="Sep4" type="HSeparator" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="SettingsScreen/MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Close Settings"

[node name="DebugPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
visible = false
script = ExtResource("11")
