[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/settings_screen.gd" id="1"]

[node name="SettingsScreen" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "CASTILE 1430 â€” Settings"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Sep1" type="HSeparator" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2

[node name="ApiSection" type="Label" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "API Configuration"
theme_override_font_sizes/font_size = 18

[node name="ApiKeyLabel" type="Label" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Anthropic API Key:"

[node name="ApiKeyInput" type="LineEdit" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "sk-ant-..."
secret = true

[node name="ModelLabel" type="Label" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Model:"

[node name="ModelOption" type="OptionButton" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="SaveSettingsButton" type="Button" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Save API Settings"

[node name="StatusLabel" type="Label" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""
theme_override_colors/font_color = Color(0.627, 0.831, 0.627, 1)
horizontal_alignment = 1

[node name="Sep2" type="HSeparator" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2

[node name="CampaignSection" type="Label" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Campaign Management"
theme_override_font_sizes/font_size = 18

[node name="NewCampaignLabel" type="Label" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "New Campaign Name:"

[node name="CampaignNameInput" type="LineEdit" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "e.g. castile_main"

[node name="StartDateLabel" type="Label" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Start Date (YYYY-MM-DD):"

[node name="StartDateInput" type="LineEdit" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "1430-01-01"
placeholder_text = "1430-01-01"

[node name="NewCampaignButton" type="Button" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Create New Campaign"

[node name="Sep3" type="HSeparator" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2

[node name="LoadLabel" type="Label" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2
text = "Load Existing Campaign:"

[node name="CampaignList" type="ItemList" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 120)

[node name="LoadCampaignButton" type="Button" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Campaign"

[node name="Sep4" type="HSeparator" parent="MarginContainer/ScrollContainer/VBox"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Close Settings"
